<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.rafaeldangelobergami.miaucha.MainScreenActivity">

    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@color/colorAccent"
        tools:text="@string/main_menu" />

    <Button
        android:id="@+id/profileButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="openProfile"
        android:text="@string/profile"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/findCatsButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="openFindCat"
        android:text="@string/find_cat"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerCatButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="openCatRegistration"
        android:text="@string/register_cat"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
</LinearLayout>
