<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="br.com.rafaeldangelobergami.miaucha.ProfileActivity">

    <TextView
        android:id="@+id/cadastroText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:onClick="takePicture"
        app:srcCompat="@mipmap/catfacebook" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="27dp">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="145dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_check_black_24dp" />

</LinearLayout>
